[package]
name = "CEX"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
actix-web = "4.11.0"
actix = "0.13.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
